--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path: ^1.9.0
   shared_preferences: ^2.2.2
   http: ^1.1.0
+  logging: ^1.2.0
 
 dev_dependencies:
   flutter_test:
